# libmahala

./: BhattacharyyaDistance.cpp  BhattacharyyaDistance.hpp  CMakeCache.txt  CMakeLists.txt  CoordinateCollector.cpp  CoordinateCollector.hpp  Doxyfile  DummyMahalanobisDistance.cpp  DummyMahalanobisDistance.hpp  MahalanobisDistance.cpp  MahalanobisDistance.hpp  Makefile  PointCollector.cpp  PointCollector.hpp  PolynomialMahalanobisDistance.cpp  PolynomialMahalanobisDistance.hpp  README.md  cmake_install.cmake  imageUtils.cpp  imageUtils.hpp  index.md  install_lib.py  install_manifest.txt  libmahala.pc  libmahala.pc.in  mahalaLibWrapper.cpp  mahala_test  mahala_test.cpp  main.cpp  mathUtils.cpp  mathUtils.hpp  temp.cpp  uninstall_lib.py
